--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.2.0
   provider: ^6.0.0
+  share_plus: ^10.1.2
+  sqflite: ^2.0.0+4
+  image_picker: ^1.1.2
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_email_sender: ^6.0.3
+  permission_handler: ^10.2.0
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,6 +68,12 @@ flutter:
     - assets/background.png
     - assets/Inicio.jpg
     - assets/logo.png
+    - assets/predefined_recipes.json
+    - assets/espresso.png
+    - assets/latte.png
+    - assets/cappuccino.png
+    - assets/cold_brew.png
+    - assets/feedback_questions.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
