--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace = "com.example.maquetafuncional_cafe"
+    namespace = "com.mistercafe.appname"
     compileSdk = 34
 
     defaultConfig {
-        applicationId = "com.example.maquetafuncional_cafe"
+        applicationId = "com.mistercafe.appname"
         minSdk = 21
         targetSdk = 34
         versionCode = 1
