--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   shared_preferences: ^2.2.0
   provider: ^6.0.0
   share_plus: ^10.1.2
-  sqflite: ^2.0.0+4
+  sqflite: ^2.4.1
   image_picker: ^1.1.2
 
 
@@ -43,6 +43,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_email_sender: ^6.0.3
   permission_handler: ^10.2.0
+  change_app_package_name: ^1.4.0
+  showcaseview: ^3.0.0
 
 
 
@@ -74,6 +76,11 @@ flutter:
     - assets/cappuccino.png
     - assets/cold_brew.png
     - assets/feedback_questions.json
+    - assets/cheesecake.png
+    - assets/torta_chocolate.jpg
+    - assets/torta_limon.jpg
+    - assets/torta_zanahoria.png
+    - assets/torta_red_velvet.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
