--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:enableOnBackInvokedCallback="true"
-        android:label="maquetafuncional_cafe"
+        android:label="Mister Café"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
