--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   permission_handler: ^10.2.0
   change_app_package_name: ^1.4.0
   showcaseview: ^3.0.0
+  flutter_launcher_icons: ^0.14.2
+  intro_slider: ^4.2.1
 
 
 
